Fixed display bug where page buttons were being displayed justified to the left, despite the component they were changing being shifted to the right.

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -73,7 +73,7 @@ a{
   display: inline;
 }
 .breed-list{
-  display: block;
+  display: inline-block;
 }
 
 tr:nth-child(even){
